corretto alcune classi di BANNER BOTTOM e FOOTER

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -245,7 +245,7 @@ div{
 
 .banner-bottom{
     height: 400px;
-    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/scheletro2.jpg") !important;
+    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/prova.jpg") !important;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
