completato pagina IL LIBRO: testo + immagine

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -280,7 +280,7 @@ li{
 
 .crwd{
     color: $primary;
-    transition: 0.5s;
+    transition: 0.5s; 
 }
 
 .crwd:hover{
@@ -289,6 +289,15 @@ li{
 
 .fab{
     font-size: 25px;
+}
+
+//Pagina IL LIBRO
+.banner-top-page{
+    height: 400px;
+    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/prova.jpg") !important;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
