--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -300,4 +300,28 @@ li{
     background-repeat: no-repeat;
 }
 
+//Pagina LA PAGINA DEI RINTRAZIAMENTI
+.book{
+    background-image: linear-gradient(#555, #111);
+    box-shadow: 0px 0px 5px #555555;
+}
+.book-page{
+    height: 500px;
+    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/carta.jpg");
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 2.5;
+    font-size: 25px;
+    font-family: 'Cedarville Cursive', cursive;
+    overflow-y: scroll;
+    //box-shadow: 0px 0px 5px #555555;
+}
+/* .page p{
+    line-height: 2.5;
+    font-size: 25px;
+    font-family: 'Cedarville Cursive', cursive;
+    overflow-y: scroll;
+} */
+
 
