--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -86,6 +86,14 @@ hr{
     margin: 0;
 }
 
+.embed-container { 
+    position: relative; 
+    padding-bottom: 56.25%;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+} 
+
 /*========================================================MENU*/
 #menu{
     transition: 0.5s;
