--- a/wp-content/themes/understrap/css/theme.css
+++ b/wp-content/themes/understrap/css/theme.css
@@ -8209,15 +8209,15 @@ a.text-dark:hover, a.text-dark:focus {
 .wp-caption-text {
   font-size: inherit; }
 
-.alignleft {
+/* .alignleft {
   display: inline;
   float: left;
-  margin-right: 1.5em; }
+  margin-right: 1.5em; } */
 
-.alignright {
+/* .alignright {
   display: inline;
   float: right;
-  margin-left: 1.5em; }
+  margin-left: 1.5em; } */
 
 .entry-footer span {
   padding-right: 10px; }
@@ -8398,30 +8398,30 @@ figure.woocommerce-product-gallery__wrapper {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
 
-.fa-rotate-90 {
+/* .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   -webkit-transform: rotate(90deg);
-  transform: rotate(90deg); }
+  transform: rotate(90deg); } */
 
-.fa-rotate-180 {
+/* .fa-rotate-180 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
   -webkit-transform: rotate(180deg);
-  transform: rotate(180deg); }
+  transform: rotate(180deg); } */
 
-.fa-rotate-270 {
+/* .fa-rotate-270 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
   -webkit-transform: rotate(270deg);
-  transform: rotate(270deg); }
+  transform: rotate(270deg); } */
 
-.fa-flip-horizontal {
+/* .fa-flip-horizontal {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1)";
   -webkit-transform: scale(-1, 1);
-  transform: scale(-1, 1); }
+  transform: scale(-1, 1); } */
 
-.fa-flip-vertical {
+/* .fa-flip-vertical {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
   -webkit-transform: scale(1, -1);
-  transform: scale(1, -1); }
+  transform: scale(1, -1); } */
 
 :root .fa-rotate-90,
 :root .fa-rotate-180,
