--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -169,20 +169,31 @@ a:hover{
     }
 }
 
-a{
-    &.dropdown-item{
-        color: $dark !important;
+.dropdown-menu{
+    li{
+        &.menu-item{
+            a{
+                color: $dark !important;
+                transition: 2s;
+            }
+            a:hover{
+                background-color: $gray-300;
+            }
+        }
+
+        &.menu-item:hover{
+            background-color: $gray-300;
+        }
     }
-    &.dropdown-item:hover{
-        background-color: inherit !important;
-        color: $white !important;
+    li:active{
+        &.menu-item{
+            a{
+                color: $white !important;
+            }
+        }
     }
-    &.active{
-        background-color: yellow !important;
-        color: $white !important;
-    }
-    
 }
+
     
 
 
