aggiornato classe #main-menu:active

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -127,6 +127,14 @@ hr{
     background-color: $secondary;
 }
 
+#main-menu{
+    li{
+        &.active{
+            background-color: $secondary;
+        }
+    }
+}
+
 button:focus{
     outline: inherit !important;
     span{
