--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -171,18 +171,18 @@ a{
 }
 a:hover{
     &.btn-top{
-        background-color: #6c757d !important;
+        background-color: $gray-600 !important;
         color: $white !important;
     }
 
     &.btn-top{
-        background-color: #6c757d;
+        background-color: $gray-600;
         color: $white;
     }
 }
 
 .dropdown-menu{
-    background-color: #6c757d;
+    background-color: $gray-600;
     li{
         &.menu-item{
             a:hover{
@@ -337,6 +337,15 @@ li{
     background-repeat: no-repeat;
 }
 
+//IL CROWDFUNDING - COME FUNZIONA
+.infographic{
+    transition: 0.5s;
+}
+.infographic:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 30px #777;
+}
+
 //Pagina LA PAGINA DEI RINTRAZIAMENTI
 .book{
     background-image: linear-gradient(#555, #111);
@@ -372,43 +381,63 @@ iframe{
 
 //IL BLOG
 
+div{
+    &.card{
+        border: inherit;
+        border-radius: inherit !important;
+        transition: 0.5s;
 
-    div{
-        &.card{
-            div{
-                &.avatar{
-                    position: relative;
-                    top: -50px;
-                    margin-bottom: -50px;
-            
-                    img{
-                        width: 100px;
-                        height: 100px;
-                        max-width: 100px;
-                        max-height: 100px;
-                        -webkit-border-radius: 50%;
-                        -moz-border-radius: 50%;
-                        border-radius: 50%;
-                        border: 1px solid rgba(0,0,0,.125);
-                    }
-                }
-            }
-            div{
-                &.card-body{
-                    h1{
-                        color: $primary;
-                        font-size: 28px;
-                    }
-                }
-            }
-            div{
-                &.card-footer{
-                    color: $gray-600;
-                    font-size: 12px;
+        div{
+            &.avatar{
+                position: relative;
+                top: -50px;
+                margin-bottom: -50px;
+        
+                img{
+                    width: 100px;
+                    height: 100px;
+                    max-width: 100px;
+                    max-height: 100px;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    border-radius: 50%;
+                    border: 1px solid rgba(0,0,0,.125);
                 }
             }
         }
+        div{
+            &.card-body{
+
+                h1{
+                    color: $primary;
+                    font-size: 28px;
+                }
+
+                .btn{
+                    border-radius: inherit;
+                    border: inherit;
+                    transition: 0.5s;
+                }
+                .btn:hover{
+                    background-color: $gray-600;
+                }
+            }
+        }
+        div{
+            &.card-footer{
+                background-color: $gray-200;
+                border-top: inherit;
+                color: $gray-600;
+                font-size: 12px;
+            }
+        }
     }
+
+    .card:hover{
+        transform: scale(1.01);
+        box-shadow: 0px 0px 30px #777;
+    }
+}
 
 
 
