cutsotmizzato right-sidebar per articoli

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -439,6 +439,17 @@ div{
     }
 }
 
+//ARTICOLI - Right
+aside{
+    h3{
+        color: $primary;
+    }
+}
+.right-widget-area{
+    h3{
+        color: $primary;
+    }   
+}
 
 
 
