completato versione provvisoria sito completo

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -458,4 +458,26 @@ aside{
 }
 
 
+//CONTATTI
+.modulo-contatti{
+    label{
+        color: $primary;
+
+        span{
+            input{
+                border-radius: inherit !important;
+            }
+
+            textarea{
+                border-radius: inherit !important;
+            }
+        }
+    }
+
+    input{
+        border-radius: inherit !important;
+    }
+}
+
+
 
