aggiunto checkbox ai form

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -475,5 +475,21 @@ aside{
     }
 }
 
+.pol-privacy{
+    span{
+        span{
+            span{
+                margin-left: 0;
+
+                label{
+                    span{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 
 
