--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -369,21 +369,22 @@ li{
 
     h1{
         color: $primary;
+        font-size: 50px;
     }
 
     .card-header{
-        background-color: $primary;
+        background-color: #F21D08;
         color: $white;
-        height: 280px;
+        height: 270px;
 
         p{
             margin: 0;
+            font-size: 17px;
 
             &.head-num{
-                font-size: 60px;
+                font-size: 100px;
+                line-height: 1;
             }
-
-            font-size: 17px;
         }
 
         h2{
@@ -392,13 +393,47 @@ li{
         }
     }
 
-    .card-body{
-        height: 530px;
+    div{
+        &#box2{
+            background-color: #E21C08;
+        }
+        &#box3{
+            background-color: #E60600;
+        }
+        &#box4{
+            background-color: #C21807;
+        }
+    }
 
-        .card-icon{
-            font-size: 60px;
-            margin-bottom: 2rem;
-            margin-top: 1rem;
+    .card-body{
+        height: 470px;
+
+        svg{
+            &#Livello_1{
+                height: 100px;
+                margin-top: 1rem;
+                margin-bottom: 2rem;
+            }
+            &#Livello_2{
+                height: 100px;
+                margin-top: 1rem;
+                margin-bottom: 2rem;
+            }
+            &#Livello_3{
+                height: 100px;
+                margin-top: 1rem;
+                margin-bottom: 2rem;
+            }
+            &#Livello_4{
+                height: 100px;
+                margin-top: 1rem;
+                margin-bottom: 2rem;
+            }
+        }
+
+        p{
+            line-height: 1.5;
+            font-size: 17px;
         }
     }
 }
