--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -373,20 +373,20 @@ li{
 
     h1{
         color: $primary;
-        font-size: 50px;
+        font-size: 65px;
     }
 
     .card-header{
         background-color: #F21D08;
         color: $white;
-        height: 270px;
+        height: 320px;
 
         p{
             margin: 0;
             font-size: 17px;
 
             &.head-num{
-                font-size: 100px;
+                font-size: 150px;
                 line-height: 1;
             }
         }
@@ -410,7 +410,7 @@ li{
     }
 
     .card-body{
-        height: 470px;
+        height: 430px;
 
         svg{
             &#Livello_1{
@@ -436,8 +436,9 @@ li{
         }
 
         p{
-            line-height: 1.5;
+            line-height: 1.2; 
             font-size: 17px;
+            //letter-spacing: 0.5px;
         }
     }
 }
