--- a/wp-content/themes/understrap/sass/theme/_mixin.scss
+++ b/wp-content/themes/understrap/sass/theme/_mixin.scss
@@ -16,3 +16,9 @@
     font-family: 'Cedarville Cursive', cursive !important;
     color: $gray-900;
 }
+
+@mixin banner-bg {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
