--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -463,27 +463,6 @@ li{
     @include banner-bg;
 }
 
-.book{
-    background-image: linear-gradient(#555, #111);
-    box-shadow: 0px 0px 5px #555555;
-    transition: 0.5s;
-}
-.book-page{
-    height: 500px;
-    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/carta.jpg");
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
-    line-height: 2.5;
-    font-size: 25px;
-    font-family: 'Cedarville Cursive', cursive;
-    overflow-y: scroll;
-}
-.book:hover{
-    transform: scale(1.01);
-    box-shadow: 0px 0px 30px #777;
-}
-
 iframe{
     width: 100%;
     height: 550px;
@@ -614,21 +593,36 @@ aside{
 }
 
 //Flipbook
-#magazine{
-    height: 804px;
-    transition: 1s ease;
+.copertina{
+    background-image: linear-gradient(#555, #111);
+    box-shadow: 0px 0px 5px #555555;
+    transition: 0.5s;
+    padding: 10px 40px;
 
-    div{
-        &.turn-page{
-            background-color:#ccc;
-            background-size:100% 100%;
-            box-shadow: 0px 0px 5px 5px #ccc;
+    #magazine{
+        height: 600px !important;
+        transition: 1s ease;
+
+        div{
+            &.turn-page{
+                background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/carta.jpg");
+                background-position: center; 
+                background-repeat: no-repeat;
+                background-size: cover;
+                //line-height: 2;
+
+                pre{
+                    font-family: 'Cedarville Cursive', cursive;
+                    overflow: inherit;
+                    font-size: 25px;
+                }
+            }
         }
     }
 }
-
-#magazine:hover{
-    box-shadow: 0px 0px 5px 5px #eee;
+.copertina:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 30px #777;
 }
 
 
