disabilitato alcune voci del menu e impostato pagina COMING SOON

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -647,5 +647,13 @@ div{
     }
 }
 
+.disabled{
+    text-decoration-line: line-through !important;
+}
+
+.comingsoon{
+    height: 100vh;
+}
+
 
 
