modificato logo footer

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -312,6 +312,10 @@ footer{
 
 #logo{
     height: 400px;
+    background-image: url("<?php echo get_template_directory_uri(); ?>/../../img/logo-def.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .light{
